--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-06 21:41:32
+lastsearch = 2024-08-07 03:26:58
 
 [everon.online]
 match = 15.4%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@cuongkhii/video/7250838547173870853
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVYMmK1F&sig=ACfU3U1CWl0Tr6HpDYAJkPCWdoSJfQGbtw&hl=en&sa=X&ved=2ahUKEwiIgabtld6HAxWJ4MkDHe7_F4QQ6AF6BAgcEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVZMrCYH&sig=ACfU3U3nURu1m-sZWXA6JZI-WIMkrw6Fow&hl=en&sa=X&ved=2ahUKEwjpz8HsmeGHAxV8ElkFHQhEJm8Q6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -26.9%%
@@ -77,9 +77,9 @@ title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
 url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
 
 [vi.wikipedia.org]
-match = -3.8%%
-title = San Diego – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/San_Diego
+match = -23.1%%
+title = Mậu dịch Nanban – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Mậu_dịch_Nanban
 
 [baocaotaichinh.vn]
 match = -19.2%%
