--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-07 02:11:12
+lastsearch = 2024-08-07 03:30:33
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,14 +12,14 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = -6.5%%
-title = Chăn ga gối Singapore Perfect Mordern Collection PM18
-url = https://demxanh.com/chan-ga-goi-singapore-perfect-modern-collection-pm18.html
+match = 32.3%%
+title = Chăn ga gối Singapore đệm tròn CIRCLE18
+url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
 
 [songhongonline.vn]
-match = 54.8%%
-title = Bộ chăn ga gối trẻ em SH_JC22 002
-url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
+match = 50.0%%
+title = Bộ chăn ga gối SH_UT24 203
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -122,9 +122,9 @@ title = CHĂN GA GỐI ĐỆM HÀN QUỐC 18 - Dodungnoithat.vn
 url = https://dodungnoithat.vn/san-pham/chan-ga-goi-dem-han-quoc-18/
 
 [songhonghanoi.vn]
-match = 19.4%%
-title = Chăn ga gối sông hồng cao cấp Urban UT23027
-url = https://songhonghanoi.vn/chan-ga-goi-song-hong-cao-cap-urban-ut23027.html
+match = 22.6%%
+title = Chăn ga gối sông hồng cao cấp Urban UT23028
+url = https://songhonghanoi.vn/chan-ga-goi-song-hong-cao-cap-urban-ut23028.html
 
 [scandalinen.vn]
 match = 25.8%%
