--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-06 21:43:57
+lastsearch = 2024-08-07 03:41:28
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -146.7%%
-title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
+match = -53.3%%
+title = Đèn Led thủy sinh T8 0.9m HT 14W
+url = https://www.thietbidiendgp.vn/products/den-led-thuy-sinh-t8-ht-14w
 
 [www.facebook.com]
 match = -186.7%%
