--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-06 23:36:32
+lastsearch = 2024-08-07 03:32:17
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Svara
 url = https://en.wikipedia.org/wiki/Svara
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -238.5%%
@@ -297,9 +297,9 @@ title = IRS face-to-face Saturday help | Internal Revenue Service
 url = https://www.irs.gov/help/irs-face-to-face-saturday-help
 
 [twitter.com]
-match = -61.5%%
-title = Haseeb Gani (@bonesmith_) / X
-url = https://twitter.com/bonesmith_?lang=en
+match = 8.3%%
+title = Aisha S Gani
+url = https://twitter.com/aishagani?lang=en
 
 [people.com]
 match = 0.0%%
