--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-07 02:31:05
+lastsearch = 2024-08-07 03:30:13
 
 [www.gov.uk]
 match = 0.0%%
@@ -387,8 +387,8 @@ title = PJM Website
 url = https://www.pjm.com/
 
 [www.ralphlauren.com]
-match = -140.0%%
-title = Men's, Women's, & Kids' Clothing - Home Decor
+match = -240.0%%
+title = Ralph Lauren | Men's, Women's, & Kids' Clothing - Home Decor
 url = https://www.ralphlauren.com/
 
 [www.wndu.com]
