--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-08-07 01:58:04
+lastsearch = 2024-08-07 03:31:15
 
 [tuhung.net]
 match = -116.7%%
@@ -12,9 +12,9 @@ title = Lưu trữ Nệm PE Hàn Quốc dày 3F - Nội Thất Tứ Hưng
 url = https://tuhung.net/danh-muc-san-pham/nem-pe-han-quoc/nem-pe-han-quoc-day-3f/
 
 [shopee.vn]
-match = -161.1%%
-title = Topper Nệm Mỏng Topper Nệm Trải Giường Trải Sàn Siêu ...
-url = https://shopee.vn/Topper-Nệm-Mỏng-Topper-Nệm-Trải-Giường-Trải-Sàn-Siêu-Mỏng-Siêu-Mát-Cho-Cả-4-Mùa-i.73225127.2732275670
+match = -127.8%%
+title = [Hà Nội] Nệm Cao Su Non American Phẳng - Đệm Nằm ...
+url = https://shopee.vn/-Hà-Nội-Nệm-Cao-Su-Non-American-Phẳng-Đệm-Nằm-Cao-Cấp-Đàn-Hồi-Thông-Thoáng-Đủ-Các-Size-i.768383270.23458107259
 
 [congtynemthangloi.com.vn]
 match = -166.7%%
@@ -54,7 +54,7 @@ url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoq3RVmK2AKZVHoJdTJ3HoksIZS4Erodrpc3eD0ffIhU_mZ5-d2E
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = -77.8%%
