--- a/images/tui-warmdream-150x190x09/config.ini
+++ b/images/tui-warmdream-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-150x190x09.html
 lastopen = 2024-06-17 10:46:30
 
 [search]
-lastsearch = 2024-08-06 16:45:28
+lastsearch = 2024-08-07 03:41:49
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOor9Y2B8xQvD2xjYR5Q-n2y3RG2CWKgfemri7ThvECuQpccVBbVf
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.roadtripamerica.com]
 match = -75.0%%
