CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-07 03:16:40
+lastsearch = 2024-08-07 04:00:19
 
 [www.facebook.com]
 match = -141.2%%
@@ -147,9 +147,9 @@ title = Seeing the unseen of Chinese herbal medicine processing ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
-match = -7.7%%
-title = Index Medicus
-url = https://books.google.com/books?id=NWRDNsmrI_IC&pg=PA4034&lpg=PA4034&dq=chan+4+kg+mao+tan&source=bl&ots=n2SrlkVxkC&sig=ACfU3U1V9TK2VG0z-9c_rrrhXTJwv4dAdQ&hl=en&sa=X&ved=2ahUKEwjo2OjFl-GHAxWKLDQIHZ3RHA8Q6AF6BAgqEAM
+match = -217.6%%
+title = Mao's Crusade: Politics and Policy Implementation in China's ...
+url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXIYBm85o&sig=ACfU3U1721D7fwhmPFIExtKVGH08EPOA0g&hl=en&sa=X&ved=2ahUKEwjW4rGmoeGHAxWKFlkFHSHHO4MQ6AF6BAgqEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
