--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-06 22:39:40
+lastsearch = 2024-08-07 03:55:22
 
 [scholar.google.com]
 match = -43.8%%
@@ -17,8 +17,8 @@ title = Hệ thống cửa hàng
 url = https://www.pnj.com.vn/ho-tro-mua-hang/he-thong-cua-hang/
 
 [www.thegioididong.com]
-match = -231.2%%
-title = 2 cách đo size vòng tay, lắc tay chính xác đơn giản nhất tại ...
+match = 0.0%%
+title = 
 url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chinh-xac-don-gian-nhat-1401980
 
 [dangcongsan.vn]
