--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-07 03:14:34
+lastsearch = 2024-08-07 04:00:59
 
 [everon.online]
 match = 50.0%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 5.9%%
 title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan?srsltid=AfmBOoqXWDaL-THI9nuW-P4cVPEebBOCvc62t_BKU2UtRQsEr4taRSVk
 
 [everonvn.com.vn]
 match = 32.1%%
