--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-07 02:02:39
+lastsearch = 2024-08-07 03:46:13
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -145,4 +145,9 @@ url = https://runa.vn/bo-chan-ga-goi-muslin-4-lop-mau-kem
 match = -47.6%%
 title = Bộ Chăn Ga Gối Everon ESTJ 24032: Giấc Mơ Hoa
 url = https://everonhanquoc.vn/everon/13887/bo-chan-ga-goi-everon-estj-24032
+
+[everon.com.vn]
+match = -104.8%%
+title = Bộ Ga Chun Everon | Sự Thuận Tiện đi Kèm Chất Lượng Tốt ...
+url = https://everon.com.vn/bo-ga-chun-everon-chat-luong-tot/
 
