--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-07 03:26:01
+lastsearch = 2024-08-07 03:44:50
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -199,7 +199,7 @@ url = https://congan.com.vn/quoc-te/thoi-su-quoc-te/chay-trung-tam-thuong-mai-o-
 [bebubam.vn]
 match = 43.5%%
 title = Chăn tuyết cho bé 2 lớp
-url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop?srsltid=AfmBOopRoDF8Dg4mJy61InVlvauFQLy-3OR1FRUsSJZp9Mh2_TDeid1O
+url = https://bebubam.vn/products/chan-tuyet-cho-be-2-lop
 
 [cafef.vn]
 match = -18.5%%
