--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-07 03:23:37
+lastsearch = 2024-08-07 03:45:11
 
 [www.muji.com]
-match = 7.1%%
-title = chăn lông nhung xám mỏng
-url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
+match = -33.3%%
+title = RUỘT CHĂN
+url = https://www.muji.com/vn/products/section/E30001
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOor75vAHWmlMoL8J6cQv4-6Oh05oh0EuRlNYVghrY2A-bD0n8evU
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -82,9 +82,9 @@ title =
 url = https://soranews24.com/2023/10/12/is-mujis-most-expensive-instant-curry-worth-its-price【taste-test】/
 
 [www.instagram.com]
-match = -307.1%%
-title = My godson sent this to us a day after Muji passed. I can tell ...
-url = https://www.instagram.com/p/Cuk8ZjBSSD0/
+match = -257.1%%
+title = Diana Chan | 🚨$1 Deal Alert🚨Get your first drink from Jarvis ...
+url = https://www.instagram.com/foodologyca/reel/C4lUgidxCoI/
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = sze long chan - cafe&meal muji
 url = https://hk.linkedin.com/in/sze-long-chan-2320561bb
 
 [www.tiktok.com]
-match = 100.0%%
-title = Chăn Lông Muji
-url = https://www.tiktok.com/discover/Chăn-lông-muji
+match = -28.6%%
+title = Muji Rice Bran Pickle
+url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 
 [www.lazada.vn]
 match = -62.5%%
