--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:26:11
 lastsearch = 2024-08-07 03:32:59
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 6.7%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 10.0%%
