--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-07 02:21:30
+lastsearch = 2024-08-07 03:53:39
 
 [shopee.vn]
 match = -73.9%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOopgxayqv0cJ17UWTwAsCvnIbmmqjDpfuRNzEWAkvMcsj6Bz0GoJ
 
 [baothaibinh.com.vn]
 match = 17.4%%
