--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-07 00:35:48
+lastsearch = 2024-08-07 03:49:01
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -64,7 +64,7 @@ url = https://www.biblestudytools.com/commentaries/gills-exposition-of-the-bible
 [www2.census.gov]
 match = -129.4%%
 title = 1930 Census: Alphabetical index of occupations
-url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha-06.pdf
+url = https://www2.census.gov/library/publications/decennial/1930/occupation-indexes/occupation-index-alpha-05.pdf
 
 [www.tiktok.com]
 match = -158.8%%
@@ -109,7 +109,7 @@ url = https://www.bing.com/
 [espndeportes.espn.com]
 match = -82.4%%
 title = Programación de 20 de Jul. al 27 de Jul.
-url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=Resto_del_Caribe
+url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=falkland_islands_(malvinas)
 
 [www.amazon.com]
 match = -188.2%%
