--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-07 00:19:51
+lastsearch = 2024-08-07 03:58:32
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -127.8%%
-title = fuong's food | CUỐN NỘM CỰC CUỐN MIỆNG!!😝😝 —— ...
-url = https://www.instagram.com/p/COmtAgeH-He/
+match = -100.0%%
+title = The Steady Market | 𝐍𝐄𝐌 𝐑𝐀́𝐍 𝐒𝐈𝐄̂𝐔 𝐍𝐆𝐎𝐍 𝐓𝐔̛̀ 𝐓𝐇𝐄 ...
+url = https://www.instagram.com/p/C-C4vjXPBHT/
 
 [www.facebook.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = -144.4%%
-title = interior #furniture #tongthaunoithat #nem #nemfurniture
-url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7165253575495864320-0-4j
+match = 5.6%%
+title = NEM Furniture JSC's Post
+url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
 
 [forum.nameberry.com]
 match = -16.7%%
