--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-07 01:54:54
+lastsearch = 2024-08-07 04:25:36
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -12,14 +12,14 @@ title = Bộ ga chun coco 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = 45.5%%
-title = Bộ ga gối Coco đủ các size
-url = https://shopee.vn/Bộ-ga-gối-Coco-đủ-các-size-i.1081989754.18186157367
+match = -59.1%%
+title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
+url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
 
 [m.facebook.com]
 match = -18.2%%
-title = COCO Decor - Chăn Ga Gối | Nam Định
-url = https://m.facebook.com/cocodecorchangagoidem/
+title = Chăn Ga Gối- Chuyên Hàng Nhập Khẩu Cao Cấp
+url = https://m.facebook.com/p/Chăn-Ga-Gối-Chuyên-Hàng-Nhập-Khẩu-Cao-Cấp-100094781869824/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = 27.3%%
-title = Ga gối chun nỉ COCO KHÔNG VIỀN
-url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
+match = -86.4%%
+title = (Giá tại xưởng) Bộ 3 món Ga gối, ga bọc nệm mẫu Báo ...
+url = https://www.lazada.vn/products/gia-tai-xuong-bo-3-mon-ga-goi-ga-boc-nem-mau-bao-hong-beo-hong-drap-giuong-gia-re-kich-thuoc-m2m6m82m2-chat-poly-cotton-ga-bo-chun-bao-ve-dem-chan-ga-goi-moon-shop-i1266837710.html
 
 [www.instagram.com]
 match = -100.0%%
@@ -42,14 +42,14 @@ title = SET GA GỐI TRẦN BÔNG SƠ ĐẬU NÀNH BỌC CHUN 28CM
 url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28cm-i2270667932-s10970367704.html
 
 [www.sendo.vn]
-match = -81.8%%
-title = Bộ 3 Món Chiếu Điều Hòa Cao Su Non CoCo Và 2 Vỏ Gối ...
-url = https://www.sendo.vn/bo-3-mon-chieu-dieu-hoa-cao-su-non-coco-va-2-vo-goi-mau-hong-la-bi-quyet-giua-long-mat-trong-ngay-he-116567630.html
+match = -72.7%%
+title = Bộ Ga Gối Cao Cấp Siêu Chất, Rẻ Nhất, Xu Hướng Mới Nhất
+url = https://www.sendo.vn/bo-ga-goi-cao-cap.htm
 
 [demxanh.com]
 match = -45.5%%
-title = Chiếu cao su non Coco bo chun màu xanh mint
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-mint.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 18
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-18.html
 
 [www.tiktok.com]
 match = -9.1%%
