--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-07 03:33:39
+lastsearch = 2024-08-07 04:28:25
 
 [shopee.vn]
-match = 12.9%%
-title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước)
-url = https://shopee.vn/chiếu-nhựa-thái-bình-tiện-dụng-(đủ-mọi-kích-thước)-i.1134304416.23562686178
+match = 19.4%%
+title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
+url = https://shopee.vn/phuong97tb
 
 [tiki.vn]
 match = 48.4%%
