--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-06 16:42:46
+lastsearch = 2024-08-07 04:17:57
 
 [everon.online]
 match = -55.6%%
@@ -38,13 +38,13 @@ url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
 match = 10.5%%
-title = Bộ Everon Epm-21071
-url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
+title = Bộ Everon Epm-21070
+url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPT-21045
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21060
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
 
 [shopee.vn]
 match = -74.1%%
