--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-06 15:23:44
+lastsearch = 2024-08-07 04:20:46
 
 [shopee.vn]
 match = 14.3%%
@@ -27,14 +27,14 @@ title = Chiếu điều hòa cao su non đa sắc tím than
 url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOorTelq7V4hIrzSMLO4hgvP7dEWE_Allij9VNE3Cim8eufEPthLl
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa là gì? Có nên dùng chiếu điều hòa?
 url = https://happynest.vn/chuyen-nha/100072743/chieu-dieu-hoa-la-gi-co-nen-dung-chieu-dieu-hoa
 
 [khodem.vn]
-match = -10.7%%
-title = CHIẾU ĐIỀU HÒA LOẠI NÀO TỐT? 3 LOẠI PHỔ BIẾN - Kho đệm
-url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
+match = 14.3%%
+title = CHIẾU ĐIỀU HÒA TENCEL NHẬT BẢN CHÍNH HÃNG 100%%
+url = https://khodem.vn/chieu-dieu-hoa-tencel-nhat-ban-chinh-hang-100/
 
 [foreverbedding.net]
 match = -3.6%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOorTO5BGwWi2W09dqi6u19bzmMeV7XT4oPLULuPddlLeyw7wDMA1
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [noithattana.vn]
 match = 21.4%%
