--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-07 00:24:21
+lastsearch = 2024-08-07 04:26:19
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -715,4 +715,9 @@ url = https://baochinhphu.vn/trai-nghiem-em-ve-sac-mau-tinh-nguyen-day-y-nghia-1
 match = -206.2%%
 title = Ninh Bình: Bắt các vụ án về mua bán và tổ chức sử dụng ...
 url = https://nbtv.vn/ninh-binh-bat-cac-vu-an-ve-mua-ban-va-to-chuc-su-dung-trai-phep-chat-ma-tuy-76723.html
+
+[www.tiktok.com]
+match = 25.0%%
+title = Triệu Y Xèng Lắc
+url = https://www.tiktok.com/discover/triệu-y-xèng-lắc
 
