--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-07 02:16:02
+lastsearch = 2024-08-07 04:21:28
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -485,4 +485,9 @@ url = http://chieulongdinh.com.vn/vi/san-pham/9/chieu-coi-soc-1m-x-2m.html
 match = 37.5%%
 title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
+
+[chuthapdotphcm.org.vn]
+match = -187.5%%
+title = Lớp Sơ cấp cứu cơ bản Khóa 14, ngày 07/9/2024 (thứ bảy)
+url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
 
