--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-07 02:39:20
+lastsearch = 2024-08-07 04:12:47
 
 [demxanh.com]
 match = -9.1%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooBI4tt2nfr7J9UVyzxkOy4znVX8LLZXiEQbSbwRqp2JJVEukJR
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
