--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-07 03:51:53
+lastsearch = 2024-08-07 04:24:17
 
 [demxanh.com]
-match = 37.0%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = 0.0%%
+title = Chiếu Trúc Thanh Hương Trúc Trúc đá viền lụa
+url = https://demxanh.com/chieu-truc-thanh-huong-truc-truc-da-vien-lua-new.html?srsltid=AfmBOorU7l33Llmv1s1WiO3QuV_buo64qJ6B9dDb_uRsY92rNnU5OqN8
 
 [demre.com.vn]
 match = 66.7%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
 url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
 
 [dem24h.vn]
-match = 29.6%%
-title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
-url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
+match = 51.9%%
+title = Chiếu trúc gập vân gỗ 2 mặt
+url = https://dem24h.vn/chieu-truc-gap-van-go
 
 [thegioidemonline.com]
 match = 65.4%%
