--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-07 02:26:55
+lastsearch = 2024-08-07 04:22:33
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+match = -80.0%%
+title = Mùng chụp đỉnh vuôn 1m6 cao cấp, hàng chất lượng sản xuất ...
+url = https://munghoangphat.com/-1-cua-mung-dinh-vuong-1m6-x-2m-cao-cap.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,14 +17,14 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -12.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 [www.lazada.vn]
 match = 28.0%%
 title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/?srsltid=AfmBOopby1UPmt49RcrPF7bYJ7_9oZjLqxYGuVhZlYL8dSlMzgW_hOrw
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [everonvn.com.vn]
 match = 0.0%%
