--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-07 00:20:12
+lastsearch = 2024-08-07 04:15:56
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -227,9 +227,9 @@ title = SSD prices could steady or even drop as NAND chip ...
 url = https://www.pcgamer.com/hardware/storage/ssd-prices-set-to-tumble-as-nand-chip-makers-boost-production/
 
 [www.youtube.com]
-match = -135.0%%
-title = Inside The "North Korea" of Africa 🇪🇷: How It Really Is (#174)
-url = https://www.youtube.com/watch?v=lAHumbL12Z8
+match = -30.0%%
+title = Type of Foreigners KOREANS would like?
+url = https://www.youtube.com/watch?v=93BR9fOHN6w
 
 [carnegieendowment.org]
 match = -90.0%%
