--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-07 04:13:08
 [www.diepxuan.com]
 match = 37.5%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoq9y1prox4Ll7Gcqz-jubkMJywzIBwJOOGosbSG5YXXxjrQow0k
 
 [changagoidemdep.vn]
 match = -12.5%%
