--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-06 22:31:50
+lastsearch = 2024-08-07 04:42:45
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -152,14 +152,14 @@ title = Ministry of health and welfare - 보건복지부
 url = https://www.mohw.go.kr/eng/
 
 [www.aljazeera.com]
-match = -95.7%%
-title = North Korea touts 'underwater nuclear weapons system' ...
-url = https://www.aljazeera.com/news/2024/1/19/north-korea-touts-underwater-nuclear-weapon-system-blasts-us-drills
+match = -100.0%%
+title = On North Korea's tense border, Swiss and Swedes keep a ...
+url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swiss-and-swedes-keep-a-fragile-peace
 
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=e328c47da5cf79ba&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwjsi93w1-CHAxVZEFkFHSWkGW4QsZYEegQIUxAC
+url = https://www.google.com/search?sca_esv=59e928747c7898c1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiIweDkquGHAxVtEFkFHSI7BsIQsZYEegQIJhAC
 
 [produccionesitaca.es]
 match = -21.4%%
