--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-06 22:29:24
+lastsearch = 2024-08-07 04:35:31
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -352,9 +352,9 @@ title = Records of the Office of Strategic Services ( ...
 url = https://www.archives.gov/files/iwg/declassified-records/rg-226-oss/entry-210.pdf
 
 [www.marines.mil]
-match = -6.2%%
-title = An epoch of need
-url = https://www.marines.mil/Portals/1/Publications/The Marines In Vietnam 1954-1973 An Anthology and Annotated Bibliography PCN 19000309300_2.pdf
+match = 4.5%%
+title = Czechoslovakia Study_5
+url = https://www.marines.mil/Portals/1/Publications/Czechoslovakia Study_5.pdf
 
 [isp.illinois.gov]
 match = -34.8%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -113.0%%
-title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
-url = https://en.yna.co.kr/view/AEN20180218002800320
+match = -73.9%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -665,4 +665,9 @@ url = https://www.yelp.com/biz/oc-cay-dua-san-jose-6
 match = -34.8%%
 title = League of Legends (@LeagueOfLegends) / X
 url = https://twitter.com/leagueoflegends
+
+[docs.deerfield.il.us]
+match = -39.1%%
+title = 0 - Laserfiche WebLink - Deerfield, IL
+url = http://docs.deerfield.il.us/WebLink/DocView.aspx?id=3870&dbid=0&repo=villageofdeerfield
 
