--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-07 01:59:09
+lastsearch = 2024-08-07 04:33:49
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOooz76t4tPREvLiG2tjcz59LecoukNuGqW06e-y3UxPq-bmCrkcO
 
 [tuyensinh247.com]
 match = -220.0%%
@@ -475,4 +475,9 @@ url = https://luongthevinh.com.vn/home/?p=997
 match = 6.7%%
 title = Chiến công trên đồi D1
 url = https://www.qdnd.vn/quoc-phong-an-ninh/chien-thang-dien-bien-phu-moc-son-lich-su/dien-bien-chien-dich/chien-cong-tren-doi-d1-770786
+
+[vietinbank.vn]
+match = -200.0%%
+title = Mạng lưới chi nhánh ATM | Ngân hàng Thương mại Cổ ...
+url = https://vietinbank.vn/mang-luoi-chi-nhanh-atm
 
