--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -27,14 +27,14 @@ title = LÒ XO TÚI RUBY POTENCY
 url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
-match = -35.0%%
-title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
-url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
+match = -25.0%%
+title = Đệm Lò Xo Túi Adaptive Tuấn Anh
+url = https://dem24h.vn/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demviethome.vn]
-match = -140.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
+match = -135.0%%
+title = Đệm lò xo Tuấn Anh Adaptive Pocket Cuộn giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive-pocket-cuon/
 
 [bedding.vn]
 match = -25.0%%
