--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-07 03:23:58
+lastsearch = 2024-08-07 04:37:33
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoqsOkF_9Jo7xF5lsVQIMwIqmCxMUnlCQ8EmDJ8KoQhzcoNQrXgb
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -31.2%%
-title = Huda Beauty Best Lip Liner
-url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
+match = -206.2%%
+title = Huda beauty lipstick shade ‘buttercup’ thank me later ...
+url = https://www.tiktok.com/@megxfenwick/video/7321757021164932384
 
 [archiveofourown.org]
 match = -137.5%%
