CI images update

--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-07 01:45:09
+lastsearch = 2024-08-07 04:55:00
 
 [tiki.vn]
 match = -133.3%%
@@ -12,14 +12,14 @@ title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=72012337/
 
 [joliefam.vn]
-match = -140.0%%
-title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
-url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
+match = -13.3%%
+title = Chăn cừu pháp Joliefam ghi tối
+url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
 
 [www.lazada.vn]
 match = -166.7%%
 title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/?srsltid=AfmBOoqBWRUHcu05GSBn1LKjKGzkcKcbOt7IyHP9G7DEGp7mAnXwKvxZ
+url = https://www.lazada.vn/tag/chan-long-cuu-2m/
 
 [tokyolife.vn]
 match = -193.3%%
@@ -94,7 +94,7 @@ url = https://www.dem365.vn/chan-long-cuu-gia-re/
 [demxanh.com]
 match = -73.3%%
 title = Chăn lông cừu Normal mã 12 Hoa kẻ ngang
-url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html?srsltid=AfmBOorKOb8xq7hOf3Hq7XfNID_Xtx9lj9GzAfWW5mmIX_aWsLwBsBYo
+url = https://demxanh.com/chan-long-cuu-normal-ma-12-hoa-ke-ngang.html
 
 [shope.io.vn]
 match = -186.7%%
