--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 lastopen = 2024-08-01 10:35:37
 
 [search]
-lastsearch = 2024-08-06 20:54:31
+lastsearch = 2024-08-07 04:45:41
 
 [www.diepxuan.com]
 match = 38.7%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [shopee.vn]
-match = 19.4%%
-title = Chăn Chiếu Thái Bình, Cửa hàng trực tuyến
-url = https://shopee.vn/phuong97tb
+match = 3.2%%
+title = Chiếu Nhựa Thái Bình-Việt Nam Đa Dạng Kích Cỡ-Mầu Sắc
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Việt-Nam-Đa-Dạng-Kích-Cỡ-Mầu-Sắc-i.674166358.24176394117
 
 [m.facebook.com]
 match = 19.4%%
