--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -451,3 +451,8 @@ match = -43.5%%
 title = Stocks Slump On US Economic Growth Risks
 url = https://www.barchart.com/story/news/27827167/stocks-slump-on-us-economic-growth-risks
 
+[www.army.mil]
+match = -39.1%%
+title = 19th Expeditionary Sustainment Command
+url = https://www.army.mil/19thESC
+
