--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-06 23:56:53
+lastsearch = 2024-08-07 04:54:39
 
 [www.instagram.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan Dior Sunshade (@chan_dior_sunshade)
 url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
