--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-07 03:55:22
+lastsearch = 2024-08-07 04:59:28
 
 [scholar.google.com]
 match = -43.8%%
@@ -17,8 +17,8 @@ title = Hệ thống cửa hàng
 url = https://www.pnj.com.vn/ho-tro-mua-hang/he-thong-cua-hang/
 
 [www.thegioididong.com]
-match = 0.0%%
-title = 
+match = -231.2%%
+title = 2 cách đo size vòng tay, lắc tay chính xác đơn giản nhất tại ...
 url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chinh-xac-don-gian-nhat-1401980
 
 [dangcongsan.vn]
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -181.2%%
+title = Rạp Cinestar Hai Bà Trưng - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-hai-ba-trung/
 
 [nhandan.vn]
 match = -62.5%%
@@ -687,9 +687,9 @@ title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
 url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
 
 [www.momo.vn]
-match = -100.0%%
-title = Phim chiếu rạp | Lịch chiếu phim trên MoMo
-url = https://www.momo.vn/cinema/lich-chieu
+match = -18.8%%
+title = Lịch chiếu phim Lotte Cinema
+url = https://www.momo.vn/cinema/rap/lotte-cinema
 
 [baotintuc.vn]
 match = -37.5%%
@@ -810,4 +810,9 @@ url = https://medlatec.vn/tin-tuc/noi-mac-tu-cung-day-bao-nhieu-la-de-thu-thai-n
 match = -218.8%%
 title = Giao lưu, trao đổi văn hóa và giáo dục Hà Nội - Fukuoka ...
 url = https://hanoi.edu.vn/tin-tuc-su-kien/giao-luu-trao-doi-van-hoa-va-giao-duc-ha-noi-fukuoka-lan-thu-6-nam-2024/ctfull/525/15537
+
+[cinestar.com.vn]
+match = -87.5%%
+title = Chính sách bảo mật thông tin - Cinestar
+url = https://cinestar.com.vn/chinh-sach-bao-mat
 
