--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-07 04:15:14
+lastsearch = 2024-08-07 05:00:27
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -44,17 +44,17 @@ url = https://www.sendo.vn/chieu-nhua.htm
 [www.facebook.com]
 match = 63.2%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
+url = https://www.facebook.com/chieunhuathailan/
 
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOooqYKNP_T0kSJbQbQGc9UoqYpIA25KtICjTkWBHX-QHRptHsx2J
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOopLQo91qwjVDxvD6UHMZWXp-gV6hl9aBIhJNNS_lcGg0CQGZiCR
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOoq71i8hcDgcJwhhvcpnxJL9CuytiP99hc97TpDyoDZ5xugB79tG
 
 [thuanloitrading.com]
 match = 10.0%%
