--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-06 21:50:39
+lastsearch = 2024-08-07 04:52:14
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -22,8 +22,8 @@ title = Inmate Search
 url = https://www.hcso.org/justice-center-services/inmate-search/
 
 [desaulnier.house.gov]
-match = -180.0%%
-title = Congressman Mark Desaulnier | Representing the 10th ...
+match = 0.0%%
+title = 
 url = http://desaulnier.house.gov/
 
 [account.microsoft.com]
