--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-07 00:45:24
+lastsearch = 2024-08-07 04:47:45
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -1205,4 +1205,9 @@ url = https://www.kare11.com/
 match = -253.3%%
 title = ABC13 Houston news, weather and traffic - Latest Texas news ...
 url = https://abc13.com/
+
+[cathedral.org]
+match = -26.7%%
+title = Space Window Celebration
+url = https://cathedral.org/visit-tour/space-window-celebration/
 
