--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-07 00:32:57
+lastsearch = 2024-08-07 04:48:05
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOorpFfyMkrsw1mGSj9hX3o1s4eJKmQN_Gn3YDzMtanUSCZTaiL6v
+url = https://ninhouse.vn/collections/ruot-goi-1
 
 [elambo.vn]
 match = -142.9%%
@@ -59,12 +59,12 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOorf-kPp01PFRhoiFZlbsrKOt7nwYclrsn1x-Fak0bg-EebsEHa0
+url = https://jysk.vn/ruot-chan-goi
 
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOorMtbL5b6IHbU2MIqneqUeTBx0lqOSbh-bAlKk2uKbvh97uzHzx
+url = https://everonvn.com.vn/5/ruot-goi-everon
 
 [demsonghonghanoi.com]
 match = -235.7%%
@@ -72,9 +72,9 @@ title = Ruột gối Sông Hồng chính hãng giá rẻ nhất thị trường 
 url = https://demsonghonghanoi.com/ruot-goi-song-hong/
 
 [shopee.vn]
-match = -78.6%%
-title = Ruột gối hơi bông gòn Thắng Lợi ...
-url = https://shopee.vn/product/431709776/18649811558
+match = -121.4%%
+title = ruột gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ruột gối
 
 [www.changagoidemeveron.vn]
 match = -78.6%%
