--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-07 03:36:41
+lastsearch = 2024-08-07 04:59:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Thảm lau chân giúp êm chân khô giáo và sạch bóng 2 cỡ ...
 url = https://tiki.vn/tham-lau-chan-giup-em-chan-kho-giao-va-sach-bong-2-co-gdth-3-mau50x80-p242108354.html?spid=242108363
 
 [shopee.vn]
-match = -41.7%%
-title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
-url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
+match = -58.3%%
+title = Thảm chùi chân bằng sợi tổng hợp KT 50x80 cm, dày 5mm ...
+url = https://shopee.vn/Thảm-chùi-chân-bằng-sợi-tổng-hợp-KT-50x80-cm-dày-5mm-60-cái-Carton-không-nhãn-hiệu-i.887732913.23002406826
 
 [lepetit.com.vn]
 match = -79.2%%
