CI images update

--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-07 04:24:17
+lastsearch = 2024-08-07 05:41:51
 
 [demxanh.com]
-match = 0.0%%
-title = Chiếu Trúc Thanh Hương Trúc Trúc đá viền lụa
-url = https://demxanh.com/chieu-truc-thanh-huong-truc-truc-da-vien-lua-new.html?srsltid=AfmBOorU7l33Llmv1s1WiO3QuV_buo64qJ6B9dDb_uRsY92rNnU5OqN8
+match = 37.0%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,9 +42,9 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 63.0%%
-title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+match = 11.1%%
+title = Điệp Xuân Chiếu trúc trung quốc
+url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html
 
 [shopee.vn]
 match = -48.1%%
