--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-08-06 21:41:55
+lastsearch = 2024-08-07 05:37:17
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -137,9 +137,9 @@ title = Tụ bù tiết kiệm điện: "cú lừa" đã 14 năm vẫn khiến n
 url = https://etime.danviet.vn/tu-bu-tiet-kiem-dien-chieu-lua-da-14-nam-van-khien-nha-nha-mac-bay-2643.htm
 
 [hoavouu.com]
-match = -39.3%%
-title = Thư Mời Tiệc Chay Văn Nghệ Gây Quỹ Tu Bổ Chùa Phật Đà
-url = https://hoavouu.com/p14a43298/1/thu-moi-tiec-chay-van-nghe-gay-quy-tu-bo-chua-phat-da
+match = 12.0%%
+title = A Di Đà Kinh Thông Tán Sớ
+url = https://hoavouu.com/p19a42044/a-di-da-kinh-thong-tan-so
 
 [lavanglasvegas.com]
 match = -100.0%%
@@ -169,7 +169,7 @@ url = https://dantri.com.vn/suc-khoe/trinh-nu-hoang-cung-da-am-anh-toi-201610041
 [erado.vn]
 match = 7.1%%
 title = Sofa da bò thật nhập khẩu 2185-L10
-url = https://erado.vn/sofa-chung-cu/sofa-da-bo-that-nhap-khau-2185-l10.html?srsltid=AfmBOoruLDE-MfOUCx60Pq34qi8QcBF9ZsBOB4vx6C82uNAVlLBa2j0k
+url = https://erado.vn/sofa-chung-cu/sofa-da-bo-that-nhap-khau-2185-l10.html
 
 [vicopharonli.com]
 match = -60.7%%
@@ -187,9 +187,9 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -5.6%%
-title = TƯ VẤN Dh ĐÀI LOAN
-url = https://m.facebook.com/DOHIENDUHOC/?comment_id=Y29tbWVudDoxMTAyNzE0MjkzNTQzODk0XzExMDI3Mjc1MjAyMDkyMzg=
+match = -25.0%%
+title = Chợ Đức Hoà-KCN Tân Đức Long An ✅ | ❌GÓC GIẢI CỨU ...
+url = https://m.facebook.com/groups/1049678078900233/posts/1739540539913980/
 
 [www.instagram.com]
 match = -64.3%%
