--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-08-07 04:12:26
+lastsearch = 2024-08-07 05:35:11
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = 16.1%%
-title = Đệm bông gấm Hanvico chống khuẩn
-url = https://demxinh.vn/dem-hanvico-gam-chong-khuan.html
+match = -35.5%%
+title = Đệm lò xo Canada Bencivenni (New) - bảo hành 15 năm
+url = https://demxinh.vn/dem-lo-xo-canada-bencivenni-new.html
 
 [dongahome.vn]
 match = 3.2%%
