--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-07 05:25:46
+lastsearch = 2024-08-07 05:40:28
 
 [shopee.vn]
 match = 48.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOorcvea5XpaL0l4IFpBS37U09kDeKXnrh0AlJVT5RMI1IZdSPa2h
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
