--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-07 04:46:02
+lastsearch = 2024-08-07 05:42:33
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
-match = -109.5%%
-title = Thảm Lông Trải Sàn, thảm trải chân giường, trải chân ghế ...
-url = https://shopee.vn/Thảm-Lông-Trải-Sàn-thảm-trải-chân-giường-trải-chân-ghế-sofa-trang-trí-hàng-loại-1-(-Size-80cmx200cm)-i.120420833.21320198200
+match = -33.3%%
+title = Thảm lông cừu trải giường, thảm nỉ nhung ...
+url = https://shopee.vn/Thảm-lông-cừu-trải-giường-thảm-nỉ-nhung-trải-giường-thảm-nhung-đa-năng-thảm-trải-giường-3-lớp-loại-1-i.267488477.15016298625
 
 [tiki.vn]
 match = -38.1%%
@@ -153,8 +153,8 @@ url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-d
 
 [noithatcaco.vn]
 match = -95.2%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+title = Kinh nghiệm chọn mua giường 1m4 chất lượng, bền đẹp ...
+url = https://noithatcaco.vn/cam-nang-noi-that/giuong-1m4-500.html
 
 [dogohiephien.vn]
 match = -104.8%%
