--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-07 01:43:07
+lastsearch = 2024-08-07 05:31:05
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = 0.0%%
