CI images update

--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-07 02:44:04
+lastsearch = 2024-08-07 06:23:27
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [www.diepxuan.com]
 match = 10.7%%
@@ -250,4 +250,9 @@ url = https://en.tripadvisor.com.hk/Restaurant_Review-g33848-d3180807-Reviews-Ge
 match = -25.0%%
 title = Blankets, Bedding, Home, Furniture & DIY
 url = https://picclick.co.uk/Home-Furniture-DIY/Bedding/Blankets/
+
+[thegioidemloxo.com]
+match = 10.7%%
+title = Chăn Ga Gối Đệm giá rẻ mùa cưới
+url = https://thegioidemloxo.com/home/search.asp?keyword=Vận-chuyển
 
