--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-06 22:46:33
+lastsearch = 2024-08-07 06:14:39
 
 [nemgiakho.com]
 match = 8.6%%
@@ -14,7 +14,7 @@ url = https://nemgiakho.com/nem-lien-a-1m8-chinh-hang-gia-re.html
 [www.liena.com.vn]
 match = 8.6%%
 title = Nệm Cao Su Thiên Nhiên 100%% Liên Á Cao Cấp Giá Tốt
-url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien
+url = https://www.liena.com.vn/nem/nem-cao-su-thien-nhien?srsltid=AfmBOorJyrmUoaMIu6g4XF9atjnOe9KlVczSbOxaKAbQHuHEaydp8c2H
 
 [fefurniture.com.vn]
 match = 20.0%%
@@ -32,9 +32,9 @@ title = Nệm Liên Á - Mua Nệm Online Giảm Giá Lớn
 url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 
 [demxanh.com]
-match = 11.4%%
-title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+match = 57.1%%
+title = Đệm cao su Liên Á Classic (dày 5cm, 10cm)
+url = https://demxanh.com/dem-cao-su-lien-a-classic.html?srsltid=AfmBOooRidR4OIZgA0wTY_kBkYG4CA45O5tH48MmrkF39htgU80N4f9L
 
 [demcaosuliena.com]
 match = 48.0%%
