--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-07 03:21:30
+lastsearch = 2024-08-07 06:28:16
 
 [xoptraisan.info]
 match = -115.8%%
@@ -42,9 +42,9 @@ title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
 url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
-match = -126.3%%
-title = Combo 10 tấm xốp ghép mặt thảm nỉ, hình vuông 60cm x ...
-url = https://tiki.vn/combo-10-tam-xop-ghep-mat-tham-ni-hinh-vuong-60cm-x-60cm-tam-mau-do-do-hang-viet-nam-san-xuat-day-0-65cm-tam-p76388672.html
+match = -94.7%%
+title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
 
 [thamsami.com]
 match = -84.2%%
