--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-07 04:43:26
+lastsearch = 2024-08-07 06:29:19
 
 [demxanh.com]
-match = 20.7%%
-title = Chăn ga gối Singapore Pyeoda Skysilk 5 món 10
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-skysilk-5-mon-10.html
+match = -24.1%%
+title = Những kiến thức cần biết về chăn ga gối lụa gấm
+url = https://demxanh.com/nhung-kien-thuc-can-biet-ve-chan-ga-goi-lua-gam.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -17.2%%
-title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
+match = 51.7%%
+title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
 
 [changagoinemgiasi.com]
 match = 3.4%%
@@ -29,12 +29,12 @@ url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sk
 [shopee.vn]
 match = -20.7%%
 title = bộ chăn ga pyeoda giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
 
 [thegioidemonline.com]
-match = -27.6%%
-title = Bộ chăn ga gối khách sạn | Liên hệ ngay để nhận báo giá!
-url = https://thegioidemonline.com/bo-chan-ga-goi-khach-san.html
+match = 34.5%%
+title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
 
 [dem4mua.vn]
 match = 6.9%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopK4HibR3Zft_C9vHq8vvSI02baWCYOImN9BfKugCUdjvMuwLm1
 
 [www.facebook.com]
-match = 17.2%%
-title = Đệm Xanh Bắc Giang | Bac Giang
-url = https://www.facebook.com/demxanh.308bacgiang/?locale=hy_AM
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=de_DE
 
 [changagoidemdep.vn]
 match = 3.4%%
