--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-07 04:00:59
+lastsearch = 2024-08-07 06:14:58
 
 [everon.online]
 match = 50.0%%
@@ -13,8 +13,8 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [nem.vn]
 match = 5.9%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 5.9%%
 title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan?srsltid=AfmBOoqXWDaL-THI9nuW-P4cVPEebBOCvc62t_BKU2UtRQsEr4taRSVk
+url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -72,9 +72,9 @@ title = Hệ Thống Bán Lẻ Nệm & Chăn Ga Gối Đệm Toàn Quốc
 url = https://anpha.vuanem.com/chan-ga-goi/chan
 
 [everonminhkhai.com]
-match = 72.7%%
-title = Bộ ga chun chần bốn mùa – Trang 2
-url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/page/2/?per_page=60
+match = 52.2%%
+title = Bộ ga chun chần bốn mùa
+url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan-bon-mua/
 
 [m.facebook.com]
 match = -32.4%%
