--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-07 06:00:01
+lastsearch = 2024-08-07 06:20:40
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -75.0%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
-url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+match = -66.7%%
+title = 🔴 Trực tiếp: TRUNG QUỐC - VIỆT NAM | Giải bóng đá U19 ...
+url = https://www.youtube.com/watch?v=3U6gbHFBMhs
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -127,9 +127,9 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [thuvienphapluat.vn]
-match = -95.8%%
-title = Thông tư 36/2019/TT-BLĐTBXH Danh mục máy thiết bị vật ...
-url = https://thuvienphapluat.vn/van-ban/Lao-dong-Tien-luong/Thong-tu-36-2019-TT-BLDTBXH-Danh-muc-may-thiet-bi-vat-tu-chat-co-yeu-cau-nghiem-ngat-an-toan-435472.aspx
+match = -79.2%%
+title = Thông tư 12/2019/TT-BCT xuất xứ hàng hóa trong Hiệp ...
+url = https://thuvienphapluat.vn/van-ban/Xuat-nhap-khau/Thong-tu-12-2019-TT-BCT-xuat-xu-hang-hoa-trong-Hiep-dinh-khung-ve-hop-tac-kinh-te-toan-dien-420674.aspx
 
 [tamanhhospital.vn]
 match = -91.7%%
