--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-07 05:53:45
+lastsearch = 2024-08-07 06:17:52
 
 [everonvn.com.vn]
 match = -171.4%%
@@ -23,8 +23,8 @@ url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
 match = -142.9%%
-title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
-url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
+title = cotton lụa khung mềm như lụa set 5 món ga phủ trần bông ...
+url = https://muathongminh.vn/cotton-lua-khung-mem-nhu-lua-set-5-mon-ga-phu-tran-bong-cao-cap-chan-tran-bong-so-tam-day-dan-p.1__7351007633__289057741
 
 [beecost.vn]
 match = -176.2%%
