--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-07 05:55:08
+lastsearch = 2024-08-07 06:17:07
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,14 +17,14 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -194.4%%
+title = Siêu thị online - Hội cư dân Prosper Plaza Quận 12 | Nem chua ...
+url = https://m.facebook.com/groups/2300069060013852/posts/8175822975771735/
 
 [thegioinem.com]
-match = -155.6%%
-title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
-url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
 match = -155.6%%
@@ -235,4 +235,9 @@ url = https://puntmobles.com/products/VLS-EXT
 match = -150.0%%
 title = AXOR MyEdition Mezclador monomando de lavabo de pared
 url = https://pro.hansgrohe-la.com/articledetail-axor-myedition-mezclador-monomando-de-lavabo-de-pared-47060000
+
+[cooking.nytimes.com]
+match = 0.0%%
+title = 
+url = https://cooking.nytimes.com/recipes/1019032-nem-nuong-vietnamese-sausage
 
