--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-07 05:26:50
+lastsearch = 2024-08-07 06:21:43
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -97,8 +97,8 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [decosy.com]
-match = -50.0%%
-title = Furniture & Decoration - Decosy Vietnam
+match = 4.5%%
+title = Furniture & Decoration
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [maybedding.vn]
