CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-07 05:31:24
+lastsearch = 2024-08-07 06:37:41
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -863,8 +863,8 @@ url = http://www.hawacom.vn/
 
 [thoibaotaichinhvietnam.vn]
 match = -193.8%%
-title = Ngày 6/8: Giá heo hơi điều chỉnh mức tăng, giảm từ 1.000
-url = https://thoibaotaichinhvietnam.vn/ngay-68-gia-heo-hoi-dieu-chinh-muc-tang-giam-tu-1000-2000-dongkg-156495.html
+title = Phiên giao dịch chiều 6/8: Giá vàng giảm nhẹ, dầu và ...
+url = https://thoibaotaichinhvietnam.vn/phien-giao-dich-chieu-68-gia-vang-giam-nhe-dau-va-chung-khoan-phuc-hoi-156566.html
 
 [baohagiang.vn]
 match = -156.2%%
@@ -910,4 +910,9 @@ url = https://www.apple.com/vn/newsroom/2024/08/apple-arcade-launches-three-new-
 match = 18.8%%
 title = Thời sự địa phương
 url = https://thst.vn/f/thoi-su-dia-phuong-1
+
+[dienmaycholon.com]
+match = -150.0%%
+title = Nguyên nhân và cách chỉnh quạt trần bị lắc đơn giản
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/nguyen-nhan-va-cach-chinh-quat-tran-bi-lac-don-gian
 
