--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-07 04:25:57
+lastsearch = 2024-08-07 06:36:20
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = 0.0%%
-title = Sự phát triển của thai nhi tuần 4
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-4-vi
+match = -114.3%%
+title = Nhận diện kết quả bất thường khi siêu âm độ mờ da gáy ...
+url = https://www.vinmec.com/vie/bai-viet/nhan-dien-ket-qua-bat-thuong-khi-sieu-am-do-mo-da-gay-thai-nhi-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
@@ -700,4 +700,9 @@ url = https://issmitliebe.de/4086954-dương-vật-cương-cứng-khio-nào.html
 match = -71.4%%
 title = Siêu âm 4 chiều vào thời điểm nào thích hợp nhất?
 url = https://medlatec.vn/tin-tuc/sieu-am-4-chieu-vao-thoi-diem-nao-thich-hop-nhat-s28-n11043
+
+[www.vietcatholic.net]
+match = -142.9%%
+title = Ý đồ của Putin khi phái Shoigu sang Iran. F-16 Ukraine có ...
+url = http://www.vietcatholic.net/News/Html/291140.htm
 
