--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-07 01:29:52
+lastsearch = 2024-08-07 06:28:34
 
 [www.everonvn.vn]
-match = -22.6%%
-title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
+match = -38.7%%
+title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
 
 [nemgiakho.com]
 match = 54.8%%
@@ -37,9 +37,9 @@ title = ĐỆM BÔNG ÉP EVERON - Akasi
 url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [demxanh.com]
-match = -19.4%%
-title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
-url = https://demxanh.com/dem-foam-everon-extrafoam.html
+match = -16.1%%
+title = Đệm Everon chính hãng, đệm bông ép Hàn Quốc giá Sốc
+url = https://demxanh.com/dem-bong-ep-everon.html
 
 [everon.online]
 match = 0.0%%
@@ -49,7 +49,7 @@ url = https://everon.online/products/vo-boc-dem-bong-ep-everon
 [everonvn.com.vn]
 match = 3.6%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOorXeSznQmoyAhjYrlQKcEGuDuCsXlIbm764ozKSZ2qKkCfxfNAG
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [demchinhhang.com]
 match = 12.9%%
@@ -63,8 +63,8 @@ url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
 match = -4.3%%
-title = Chăn Ga Everon EPM24068
-url = https://thegioinem.com/chan-ga-everon-epm24068.html
+title = Chăn Ga Everon EPT24082
+url = https://thegioinem.com/chan-ga-everon-ept24082.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
