--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-07 05:48:10
+lastsearch = 2024-08-07 06:41:50
 
 [chieutruc.info]
-match = -63.6%%
-title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
-url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+match = -100.0%%
+title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
+url = https://chieutruc.info/chieu-coi-xuan-hoa/
 
 [tiki.vn]
 match = -36.4%%
@@ -32,14 +32,14 @@ title = Sự phát triển của thai nhi tuần 18
 url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
-match = -109.1%%
-title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
-url = https://www.youtube.com/watch?v=uPDPr__M7aI
+match = -95.5%%
+title = LẤY CHỒNG TUỔI 18 - TẬP 1 FULL | Thanh Trúc, Băng Di ...
+url = https://www.youtube.com/watch?v=LOOlpShtakg
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 45.5%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
 match = -77.3%%
@@ -285,4 +285,9 @@ url = https://www.petrolimex.com.vn/
 match = 0.0%%
 title = 
 url = https://hellobacsi.com/mang-thai/thai-ky/tam-ca-nguyet-2/thai-nhi-18-tuan/
+
+[cellphones.com.vn]
+match = -109.1%%
+title = Top 18 phim bách hợp Thái Lan hay, được yêu thích nhất ...
+url = https://cellphones.com.vn/sforum/phim-bach-hop-thai
 
