--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-07 05:52:21
+lastsearch = 2024-08-07 06:36:00
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+match = 35.7%%
+title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOoqs2v36gIwUc-YAQvGVc0BMjjp-WICwMnYGFVpsKGcAQ7pwKvK9
 
 [shopee.vn]
 match = -3.6%%
@@ -52,9 +52,9 @@ title = ArmyHaus Chuyên Đồ Phượt, Đồ Du Lịch, Bảo Hộ Moto HÀ ..
 url = https://armyhaus.com/
 
 [www.facebook.com]
-match = -3.6%%
-title = Tour Hội Chợ Triển Lãm Quốc Tế | Hanoi
-url = https://www.facebook.com/tourhoichoquocte/
+match = 10.7%%
+title = hội lái xe 16 chỗ Hà Nội trao đổi việc
+url = https://www.facebook.com/groups/330360110842692/
 
 [vneconomy.vn]
 match = -25.0%%
@@ -345,4 +345,9 @@ url = https://d1kndcit1zrj97.cloudfront.net/uploads/Danh_sach_ma_quay_thuong_T2_
 match = 35.7%%
 title = Phan Thiết | Địa danh du lịch
 url = http://dulichthanhhoa.com.vn/Phan-Thiet.html
+
+[vov.vn]
+match = -60.7%%
+title = Sẽ mở rộng cao tốc đoạn Cao Bồ - Mai Sơn lên 6 làn xe ...
+url = https://vov.vn/xa-hoi/se-mo-rong-cao-toc-doan-cao-bo-mai-son-len-6-lan-xe-vao-thang-112024-post1112399.vov
 
