--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-07 05:57:14
+lastsearch = 2024-08-07 06:31:34
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -327,8 +327,8 @@ title = Cổng thông tin điện tử thành phố Đồng Xoài
 url = https://dongxoai.gov.vn/
 
 [antv.gov.vn]
-match = -46.2%%
-title = An ninh ti vi
+match = -28.6%%
+title = Lịch phát sóng
 url = https://antv.gov.vn/truyen-hinh-truc-tuyen.html
 
 [taisancong.vn]
