--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-07 05:13:07
+lastsearch = 2024-08-07 06:43:33
 
 [www.bible.com]
-match = -64.7%%
-title = Matyu 20 | TPIPNG Bible | YouVersion
-url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -72,9 +72,9 @@ title = Repairing threads on Inlet NOX sensor bung on 1-Box ...
 url = https://www.tiktok.com/@thedieseltechs/video/7306827916053138731
 
 [en.wikipedia.org]
-match = 0.0%%
-title = SCP Foundation
-url = https://en.wikipedia.org/wiki/SCP_Foundation
+match = -36.4%%
+title = Sofi Tukker
+url = https://en.wikipedia.org/wiki/Sofi_Tukker
 
 [www.instagram.com]
 match = -182.4%%
@@ -204,7 +204,7 @@ url = https://ulele.com/
 [www.nothingbundtcakes.com]
 match = -94.1%%
 title = Nothing Bundt Cakes: Delicious Bundt Cakes
-url = https://www.nothingbundtcakes.com/
+url = https://www.nothingbundtcakes.com/?srsltid=AfmBOoqPQT4S0C2Ui7z_7J881y8HT45Jq6Pvn7AUggbNaPef80yh3AeO
 
 [events.stanford.edu]
 match = -82.4%%
@@ -215,4 +215,9 @@ url = https://events.stanford.edu/
 match = 0.0%%
 title = Màn chụp tự bung Zozo hoa 2x2,2m
 url = https://muachunghaiphong.com/Do-da-dung/Man-chup-tu-bung-Zozo-hoa-2x2-2m.html
+
+[m.facebook.com]
+match = -170.6%%
+title = I am appealing to parents of Manus students attending ...
+url = https://m.facebook.com/groups/754126754686589/posts/i-am-appealing-to-parents-of-manus-students-attending-university-of-papua-new-gu/7453877858044745/
 
