--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-07 05:16:14
+lastsearch = 2024-08-07 06:38:05
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
@@ -139,7 +139,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [vuanem.com]
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
-url = https://vuanem.com/brand/everon?srsltid=AfmBOorDstcAXSMLC7UWP2aZG1kiM4n6H8MOzKosbLh02JaYhguBVR7Q
+url = https://vuanem.com/brand/everon
 
 [www.khodemthanhdo.com]
 match = -20.0%%
