--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 01:14:08
 lastsearch = 2024-08-07 06:12:38
 
 [www.tiktok.com]
-match = -206.2%%
-title = Huda beauty lipstick shade ‘buttercup’ thank me later ...
-url = https://www.tiktok.com/@megxfenwick/video/7321757021164932384
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [digitalmaine.com]
 match = -75.0%%
