--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-07 05:45:42
+lastsearch = 2024-08-07 06:30:32
 
 [ninhouse.vn]
 match = -146.2%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOooGkN-rfvfsJNPrYZ_bu_XWYXtysNAhDDIv_QXi4z-Rk-YhpaB0
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -253.8%%
 title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từng ...
-url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
+url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai?srsltid=AfmBOoreh5XPnyPYB0G4EbTPpo5hh901c_OZKvi7gs9P4A_bgmQ2x_q6
 
 [www.reddit.com]
 match = -230.8%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+url = https://jysk.vn/vo-goi?srsltid=AfmBOoro-2-61-ZzW8VJAwOZir4W5pbO3QipPTkWVPSS0y5IGyr8uCze
 
 [www.everonvn.vn]
 match = 15.4%%
