CI images update

--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -117,9 +117,9 @@ title = Đồng bộ thi hành Luật Căn cước
 url = https://baolangson.vn/dong-bo-thi-hanh-luat-can-cuoc-5013468.html
 
 [baomoi.com]
-match = -104.8%%
-title = Thảm án người Việt ở Thái Lan: Buổi chiều định mệnh ...
-url = https://baomoi.com/tham-an-nguoi-viet-o-thai-lan-buoi-chieu-dinh-menh-o-can-phong-tu-than-c49657511.epi
+match = -128.6%%
+title = ĐH Kỹ thuật Công nghiệp: Không kê chỉ tiêu, số nhập học ...
+url = https://baomoi.com/dh-ky-thuat-cong-nghiep-khong-ke-chi-tieu-so-nhap-hoc-o-de-an-du-co-tuyen-sinh-c49834329.epi
 
 [plo.vn]
 match = -128.6%%
@@ -242,9 +242,9 @@ title = Nhà đầu tư Thái Lan tìm hiểu cơ hội đầu tư tại Việt 
 url = https://yuanta.com.vn/tin-tuc/nha-dau-tu-thai-lan-tim-hieu-co-hoi-dau-tu-tai-viet-nam
 
 [hoanghoa.gov.vn]
-match = -71.4%%
-title = Hoằng Sơn- sôi nổi các hoạt động hè năm 2024.
-url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/van-hoa-thong-tin-the-thao-va-du-lich/hoang-son-soi-noi-cac-hoat-dong-he-nam-2024.html
+match = -81.0%%
+title = Thôn Trung thượng xã Hoằng Hải nỗ lực xây dựng ...
+url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/thon-trung-thuong-xa-hoang-hai-no-luc-xay-dung-thon-kieu-mau.html
 
 [baonamdinh.vn]
 match = -66.7%%
@@ -687,9 +687,9 @@ title = Câu hỏi thường gặp
 url = https://www.xanhsm.com/cau-hoi-thuong-gap/
 
 [vietstock.vn]
-match = -114.3%%
-title = [Longform] TPBank - Từ lá cờ đầu về ngân hàng số đến ...
-url = https://vietstock.vn/2024/08/tpbank-tu-la-co-dau-ve-ngan-hang-so-den-cong-cuoc-chuyen-doi-xanh-757-1212709.htm
+match = -128.6%%
+title = Tổng Giám đốc Lê Hoàng Khánh Nhựt: DRC nói không với ...
+url = https://vietstock.vn/2024/08/tong-giam-doc-le-hoang-khanh-nhut-drc-noi-khong-voi-chay-dua-ve-gia-737-1216708.htm
 
 [issmitliebe.de]
 match = -28.6%%
