--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-07 05:33:49
+lastsearch = 2024-08-07 06:57:46
 
 [burningman.org]
 match = -60.0%%
@@ -920,4 +920,9 @@ url = https://www.dmns.org/
 match = -86.7%%
 title = 10 parameters you are a healthy man
 url = https://www.vinmec.com/eng/article/10-parameters-you-are-a-healthy-man-en/
+
+[www.santamonica.gov]
+match = -46.7%%
+title = santamonica.gov - Home Page
+url = https://www.santamonica.gov/
 
