--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-08-07 04:13:08
+lastsearch = 2024-08-07 07:00:51
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOoq9y1prox4Ll7Gcqz-jubkMJywzIBwJOOGosbSG5YXXxjrQow0k
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [changagoidemdep.vn]
 match = -12.5%%
