--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -33.3%%
+title = ANNUAL REPORT 2015 / 16
+url = https://www.tuigroup.com/damfiles/default/tuigroup-15/en/investors/6_Reports-and-presentations/Reports/2016/TUI_AR_2015-16_withMagazine.pdf-4572fe3dec10f0196450291182933f8c.pdf
 
 [www.tui.nl]
 match = -316.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = 36.4%%
+title = TUI Cruises
+url = https://www.linkedin.com/company/tui-cruises-gmbh/
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / ...
-url = https://www.tui.co.uk/
+match = -183.3%%
+title = Travel Money | Foreign Currency Exchange
+url = https://www.tui.co.uk/travel-money
 
 [maritime-executive.com]
 match = -316.7%%
