--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-06 20:00:05
+lastsearch = 2024-08-07 09:21:38
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
-url = https://everonvn.com.vn/everon/742/bo-everon-est19032
+match = 15.8%%
+title = Bộ Everon Epm-19064
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
 match = 40.0%%
@@ -18,8 +18,8 @@ url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPM19065
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html
+title = Bộ chăn ga gối EVeron EPM19068
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
@@ -105,4 +105,9 @@ url = https://www.youtube.com/watch?v=ge-8pHMQi9Y
 match = -81.5%%
 title = Half price awesome Visconti FP - Historical Sales Forums
 url = https://www.fountainpennetwork.com/forum/topic/96228-half-price-awesome-visconti-fp/
+
+[www.everonvn.vn]
+match = -55.6%%
+title = Everon EPM19064 | Bộ sưu tập chăn ga gối Everon 2019
+url = https://www.everonvn.vn/chi-tiet/Everon-EPM19064.html
 
