--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-07 05:15:53
+lastsearch = 2024-08-07 09:17:25
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = -55.6%%
-title = Mền nhung tuyết Thái Lan / nhắn tin chọn màu / nếu ko , ...
-url = https://shopee.vn/Mền-nhung-tuyết-Thái-Lan-nhắn-tin-chọn-màu-nếu-ko-shop-sẽ-giao-màu-ngẫu-nhiên.-i.78219540.1375930243
+match = -18.5%%
+title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
+url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
 
 [www.lazada.vn]
 match = 3.7%%
