--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-07 04:40:43
+lastsearch = 2024-08-07 09:09:08
 
 [shopee.vn]
-match = -33.3%%
-title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
-url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
+match = 52.2%%
+title = Chiếu điều hoà siêu mát
+url = https://shopee.vn/Chiếu-điều-hoà-siêu-mát-i.62996878.1387569555
 
 [demxanh.com]
 match = -14.8%%
