--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-08-07 06:31:34
+lastsearch = 2024-08-07 09:22:58
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -75.0%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
-url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+match = -104.2%%
+title = [Trực tiếp] Tổng đài nông nghiệp, ngày 05/08/2024 (từ 10h25 ...
+url = https://www.youtube.com/watch?v=gW-6EWkFlqs
 
 [www.chotot.com]
 match = -54.2%%
