--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-07 04:51:52
+lastsearch = 2024-08-07 09:20:56
 
 [dvan.org]
 match = -41.7%%
@@ -235,4 +235,9 @@ url = https://nemtotgiare.com/san-pham/goi-om-long-vu-nhan-tao-winwin-230.html
 match = 8.3%%
 title = Gối Bà Bầu Giá Rẻ
 url = https://goibabau.vn/danh-muc/goi-ba-bau-vai-vn/
+
+[nemtanphu.com]
+match = -200.0%%
+title = Gối Ôm Lông Vũ WinWin Mềm Mịn Bồng Bềnh Giá Rẻ
+url = https://nemtanphu.com/goi-om-long-vu-winwin/
 
