--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 03:18:45
+lastsearch = 2024-08-07 09:16:43
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -164.7%%
-title = Hoa took my trailer!! #hoa #neighbor #karen #karenmovie
-url = https://www.tiktok.com/@hoa.guy/video/7374755848872103214
+match = -35.3%%
+title = Hoa Person for The 4th of July
+url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
 
 [www.steadily.com]
 match = 0.0%%
