--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-07 05:13:49
+lastsearch = 2024-08-07 09:06:03
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
 match = -138.9%%
@@ -27,9 +27,9 @@ title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
 url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
-url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
+match = -138.9%%
+title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [vatlieulotsan.com]
 match = -83.3%%
@@ -42,9 +42,9 @@ title = Thảm Tường Lâm
 url = https://thamtuonglam.vn/
 
 [thamachau.vn]
-match = -55.6%%
-title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
-url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
+match = -27.8%%
+title = Thảm xốp 1 màu vân caro 60*60*6 tấm
+url = http://thamachau.vn/tham-xop-1-mau-van-caro-60-60-6-tam520
 
 [thamsami.com]
 match = -94.4%%
@@ -85,4 +85,9 @@ url = https://lombom.com/tham-xop-ghep-co-xanh/
 match = -133.3%%
 title = 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
 url = https://www.sendo.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cmtam-mau-xam-sang-nhu-hinh-38742680.html
+
+[sieuthinguyenkim.com]
+match = -188.9%%
+title = Xốp nỉ trải sàn tường lâm 60 x 60cm ( 10 tấm) - Thảm trang trí
+url = https://sieuthinguyenkim.com/xop-ni-trai-san-tuong-lam-60-x-nsh590886363.html
 
