--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-07 06:55:43
+lastsearch = 2024-08-07 09:11:53
 
 [www.youtube.com]
 match = -40.7%%
@@ -227,9 +227,9 @@ title = Bộ drap giường vỏ gối và bộ chăn ga hàn quốc Tết
 url = http://www.changabluetoday.com/bai-viet/bo-drap-giuong-vo-goi-va-bo-chan-ga-han-quoc-tet/248/
 
 [khodem.vn]
-match = -3.7%%
-title = Bộ chăn ga gối kẻ trắng khách sạn - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-ke-trang-khach-san/
+match = -14.8%%
+title = Bộ chăn ga gối lụa Pyeoda Silk Sky - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-lua-pyeoda-silk-sky/
 
 [freedomforvietnam.wordpress.com]
 match = -29.6%%
